# go/api/routes/routes.go
@@ -4,14 +4,10 @@ import (
 	"example/hello/api/controllers/activity"
 	"example/hello/api/controllers/auth"
 	"example/hello/api/controllers/destinations"
+	groupVoyage "example/hello/api/controllers/groupeVoyage"
 	voyage "example/hello/api/controllers/voyages"
-	"example/hello/api/controllers/voyage"
 	"example/hello/api/middlewares"
 
-	"os"
-
-	"github.com/gin-contrib/sessions"
-	"github.com/gin-contrib/sessions/cookie"
 	"github.com/gin-gonic/gin"
 )
 
@@ -22,7 +18,6 @@ func RegisterRoutes(r *gin.Engine) {
 	r.GET("/profile", middlewares.CheckAuth, auth.UserProfile)
 	r.POST("/forgotten_password", auth.MailRecovery)
 	r.PUT("/reset_password", middlewares.CheckAuth, auth.ResetPassword)
-	r.POST("/join_group", middlewares.CheckAuth, voyage.JoinGroup)
 }
 
 func VoyageRoutes(r *gin.Engine) {
@@ -47,9 +42,8 @@ func DestinationRoutes(r *gin.Engine) {
 
 func ActivityRoutes(r *gin.Engine) {
 	r.POST("/api/activity/images", activity.UploadImage)
-	r.PUT("/reset_password", auth.ResetPassword)
-
-	r.POST("/groups", middlewares.CheckAuth, voyage.CreateGroup)
-	r.POST("/groups/:group_id/join", middlewares.CheckAuth, voyage.JoinGroup)
-	r.PUT("/groups/:id/budget", middlewares.CheckAuth, voyage.UpdateBudget)
+	r.POST("/create_group", middlewares.CheckAuth, groupVoyage.CreateGroup)
+	r.POST("/groupes/:group_id/join", middlewares.CheckAuth, groupVoyage.Join)
+	r.POST("/groupes/:group_id/send_invitation", middlewares.CheckAuth, groupVoyage.SendInvitation)
+	r.PUT("/groupes/:group_id/update_budget", middlewares.CheckAuth, groupVoyage.UpdateBudget)
 }
